--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "new-site",
+  "name": "foe-website-www",
   "version": "0.0.1",
   "license": "UNLICENSED",
   "scripts": {
@@ -31,7 +31,8 @@
     "dotenv": "10.0.0",
     "globby": "^11.0.4",
     "postcss": "^8.4.12",
+    "postcss-import": "^15.0.1",
     "prettier": "^2.4.1",
-    "tailwindcss": "^3.0.23"
+    "tailwindcss": "^3.2.4"
   }
 }
